#64 rewriting build steps

--- a/Build2/Build.csproj
+++ b/Build2/Build.csproj
@@ -3,4 +3,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <RunWorkingDirectory>$(MSBuildProjectDirectory)/..</RunWorkingDirectory>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Cake.Git" Version="5.0.1" />
+  </ItemGroup>
 </Project>
