--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,8 +83,9 @@ jobs:
         with:
           name: rhel-native-libs
           path: build_linux
-      - name: Run './build.cmd BuildAll'
-        run: ./build.cmd BuildAll --configuration Release
+      - name: Run BouncyHsm main build script
+        run: dotnet run -- --target BuildAll
+        working-directory: ./Build
       - uses: actions/upload-artifact@v4
         with:
           name: Bouncy-Hsm-Artifacts
