#52 Add CKA_ENCAPSULATE/CKA_DECAPSULATE attributes.

--- a/src/Src/BouncyHsm.Core/BouncyHsm.Core.csproj
+++ b/src/Src/BouncyHsm.Core/BouncyHsm.Core.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Dunet" Version="1.11.3" />
     <PackageReference Include="MessagePack" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
+    <PackageReference Include="System.IO.Hashing" Version="8.0.0" />
   </ItemGroup>
 
 
