--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,8 +83,16 @@ jobs:
         with:
           name: rhel-native-libs
           path: build_linux
-      - name: Run './build.cmd BuildAll'
-        run: ./build.cmd BuildAll --configuration Release
+
+      # Setup .NET SDK
+      - name: Setup dotnet 10.0
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: '10.0.x'
+          cache: true
+      - name: Run BouncyHsm main build script
+        run: dotnet run -- --target BuildAll
+        working-directory: ./Build
       - uses: actions/upload-artifact@v4
         with:
           name: Bouncy-Hsm-Artifacts
