#68 Show program CMD arguments

--- a/src/RpcDefintion.yaml
+++ b/src/RpcDefintion.yaml
@@ -284,6 +284,7 @@ Messages:
       CkUlongSize: uint32
       PointerSize: uint32
       CompiuterName: string
+      CmdLine: string[]
       Platform: string
       LibVersion: string
 
