--- a/src/Src/BouncyHsm/appsettings.json
+++ b/src/Src/BouncyHsm/appsettings.json
@@ -86,8 +86,7 @@
     }
   },
   // Set base path for WebUi and REST API,
-  // it must be changed here in the configuration and in wwwroot/index.html in the tag <base href="/" />
-  // for example "AppBasePath": "/foo", <base href="/foo/" />
+  // for example "AppBasePath": "/foo"
   "AppBasePath": null
   //"Kestrel": {
   //  "Endpoints": {
